min and max duration filtering
